listroute endpoint in perseus (#27609)
